// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge tone: action renders correctly 1`] = `
<div>
  <span
    class="css-16ju22e-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;

exports[`NotificationBadge tone: neutral renders correctly 1`] = `
<div>
  <span
    class="css-1eg0j6v-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;
